--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.13.1",
     "react-breadcrumbs-dynamic": "^1.2.1",
     "react-dom": "16.13.1",
+    "react-icons": "^3.10.0",
     "react-map-gl": "^5.2.5",
     "react-paginate": "^6.3.2",
     "react-slick": "^0.26.1",
